FIX : walkings/오류 수정

--- a/walkings/templates/walkings/index.html
+++ b/walkings/templates/walkings/index.html
@@ -138,6 +138,6 @@
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5002adb5652b8017c76603959cbbf663&libraries=services"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="{% static 'JS/walkings.js' %}"></script>
+<script src="{% static 'js/walkings.js' %}"></script>
 
 {% endblock script %}
