--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="{% static '/images/namung_logo.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="{% static 'CSS/mainpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mainpage.css' %}">
 </head>
 <body class="container" style="background-color:#544B44;">
     <section class="ftco-section">
