--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -185,6 +185,7 @@
       <a href="{% url 'info:hospital' %}">
         <img src="{{ aside }}" alt="DogAdopt"  style='position:fixed' class="mb-4 banner1 " width="200px" height="auto"></a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <a href="{% url 'info:deserted' %}">
         <img src="{{ aside2 }}" alt="DogAdopt" style='position:fixed'  class="mt-4 banner2 " width="200px" height="auto"></a>
     </aside>  
       
