--- a/schedules/templates/schedules/calendar.html
+++ b/schedules/templates/schedules/calendar.html
@@ -34,7 +34,7 @@
   </div>
   <div class="app-content container">
         <h1><i class="fa fa-calendar"></i> Calendar</h1>
-  
+  <h5>달력칸을 눌러 이벤트를 추가하세요!</h5>
   <div class="row">
       <div class="col-md-12">
           <div class="tile row">
