UPDATE: 장고 메시지 기능 추가(출력)

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,13 @@
     <!-- navbar -->
     {% include "navbar.html" %}
 <div>
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} text-center">
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
   {% block content %}
   {% endblock content %}
 </div>
