--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,7 +38,7 @@
           </li>
           {% if request.user.is_authenticated %}
           <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'accounts:index' %}">{{ request.user }}</a>
+            <a class="nav-link" href="{% url 'accounts:profile' request.user %}">{{ request.user }}</a>
           </li>
           <li class="nav-item me-4 nav1-text">
             <a class="nav-link" href="{% url 'accounts:logout' %}">로그아웃</a>
