UPDATE: 불안정한 http 링크 전부 https로 교체

--- a/static/css/hospital.css
+++ b/static/css/hospital.css
@@ -194,7 +194,7 @@ img {
   padding: 12px 20px;
   width: 15%;
   border: 1px solid #ddd;
-  background: url(http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/tour/arrow_search.png) 160px center no-repeat;
+  background: url(https://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/tour/arrow_search.png) 160px center no-repeat;
   background-size: 18px;
   margin: 0 10px 0 10px;
   appearance: none;
