--- a/static/css/places.css
+++ b/static/css/places.css
@@ -186,7 +186,7 @@ ul {
   width: 120px;
   height: 40px;
   color: #fff;
-  background: #222 url(http://appdata.hungryapp.co.kr/images/hatdog/img/common/hd_T_location_on.png) 10px center no-repeat;
+  background: #222 url(https://appdata.hungryapp.co.kr/images/hatdog/img/common/hd_T_location_on.png) 10px center no-repeat;
   background-size: 30px;
   font-size: 18px;
   text-align: left;
