--- a/info/templates/info/place_index.html
+++ b/info/templates/info/place_index.html
@@ -14,8 +14,8 @@
     <h3 class="">반려동물 동반가능 여행지</h3>
     <p class="h21_h3_line_c"></p>
     <p class="h21_h3_text_c">범위 내에 <span style="color:orange;">{{places.count}}</span>개 장소가 등록되어있습니다</p>
-    <p class="h21_com_t_left pa slide-in-blurred-left"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="강아지"></p>
-    <p class="h21_com_t_right pa slide-in-blurred-right"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="청진기"></p>
+    <p class="h21_com_t_left pa slide-in-blurred-left"><img src="https://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="강아지"></p>
+    <p class="h21_com_t_right pa slide-in-blurred-right"><img src="https://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="청진기"></p>
   </div>
 </div>
 <div class="hospital_search area">
