--- a/accounts/static/css/dogsignup.css
+++ b/accounts/static/css/dogsignup.css
@@ -9,27 +9,9 @@
   100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
   }
   
-  @-moz-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-webkit-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-ms-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
 
 body {
-  background-image: url('../images/배경.jpg'), url('../images/배경.jpg'), url('../images/배경.jpg');
+  background-image: url('../images/배경.jpg');
 	animation: rain_effect 40s linear infinite;
 	-webkit-animation: rain_effect 40s linear infinite;
 	-moz-animation: rain_effect 40s linear infinite;
