--- a/accounts/static/css/login.css
+++ b/accounts/static/css/login.css
@@ -28,28 +28,9 @@
   50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
   100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
   }
-  
-  @-moz-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-webkit-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-ms-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
 
 body {
-  background-image: url('../images/배경2.jpg');
+  background-image: url('../images/배경.jpg');
 	animation: rain_effect 40s linear infinite;
 	-webkit-animation: rain_effect 40s linear infinite;
 	-moz-animation: rain_effect 40s linear infinite;
@@ -58,4 +39,12 @@ body {
 
 .card {
   height:700px;
+  opacity: 0.9;
+}
+.card-css{
+  background-color:#e6e0db;
+  padding: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
 }
