--- a/accounts/static/css/password.css
+++ b/accounts/static/css/password.css
@@ -8,25 +8,6 @@
   50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
   100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
   }
-  
-  @-moz-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-webkit-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
-  @-ms-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
-  }
-  
 
 body {
   background-image: url('../images/배경.jpg'), url('../images/배경.jpg'), url('../images/배경.jpg');
@@ -54,4 +35,9 @@ body {
 
 .btnOrange.btnPush:hover {
   box-shadow: 0px 0px 0px 0px #A66615;
+}
+
+.card {
+  background-color:#e6e0db;
+  margin:auto;
 }
