--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load django_bootstrap5 %} {% block content %} {% load static %} 
+{% comment %} {% extends 'base.html' %} {% load django_bootstrap5 %} {% block content %} {% load static %} 
 <div class="row text-center m-5">
   <!-- 회원인 경우 보이는 화면 -->
   <!-- 회원인 경우에만 강아지 등록 할 수 있게-->
@@ -31,4 +31,4 @@
     </div>
   </div>
 </div>
-{% endif %} {% endblock content %}
+{% endif %} {% endblock content %} {% endcomment %}
