--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -1,21 +1,16 @@
-{% extends 'base.html' %}
-{% load django_bootstrap5 %}
-{% load static %}
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/password.css' %}" />
+{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {% block css %}
+<link rel="stylesheet" href="{% static 'css/password.css' %}"/>
 <script src="https://kit.fontawesome.com/dcba51bc42.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-{% endblock css %}
-
-{% block content %}
-  <div class="password">
-    
-    <form action="" method="POST" class="password-form container d-flex card mt-4 mb-5 w-50 row">
-      {% csrf_token %}
-      {% bootstrap_form form %}
-        <button type="button" class="btn button btnPush btnOrange m-3 mb-3 w-25" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}' "> 수정</button>
-        <button type="button" class="btn button btnPush btnOrange m-3 w-25"  title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}' ">취소</button>
-      </div>
-    </form>
-  </div>
+ {% endblock css %} {% block content %}
+<div class=" container d-flex justify-content-center card mt-5 mb-5 w-50">
+	<h1 class="text-center mt-5 mb-5">비밀번호 변경</h1>
+	 {% csrf_token %} {% bootstrap_form form %} 
+<p class="text-center">
+  <button type="button" class="btn button btnPush btnOrange m-3 mb-3 " title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}'"> 수정</button>
+	<button type="button" class="btn button btnPush btnOrange m-3 mb-3" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}'">취소</button>
+</p>
+</div>
+</form>
+</div>
 {% endblock content %}
