--- a/accounts/static/css/signup.css
+++ b/accounts/static/css/signup.css
@@ -2,37 +2,48 @@
   font-family: 'Jua', sans-serif;
 }
 
-
 /*Keyframes*/
 @keyframes rain_effect {
   0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; }
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; }
-  }
-  
-  @-moz-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; }
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; }
-  }
-  
-  @-webkit-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; }
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; }
-  }
-  
-  @-ms-keyframes rain_effect {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 400px 800px, 300px 300px, 200px 200px; }
-  100% {background-position: 0px 0px, 0px 0px, 0px 0px; }
+  50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
+  100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
   }
   
 
 body {
-  background-image: url('../images/배경2.jpg');
+  background-image: url('../images/배경.jpg');
 	animation: rain_effect 40s linear infinite;
 	-webkit-animation: rain_effect 40s linear infinite;
 	-moz-animation: rain_effect 40s linear infinite;
 	-ms-animation: rain_effect 40s linear infinite; 
 }
+
+
+.card-css{
+  background-color:#e6e0db;
+  padding: 20px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+/* 버튼 css*/
+.btnOrange {
+  background: #E3B57E;
+}
+.btnFade.btnOrange:hover {
+  background: rgb(185, 113, 25);
+}
+
+.btnOrange:hover {
+  background: #e79026;
+}
+.btnOrange.btnPush {
+  box-shadow: 0px 5px 0px 0px #A66615;
+  width: 130px;
+  font-size:small;
+}
+
+.btnOrange.btnPush:hover {
+  box-shadow: 0px 0px 0px 0px #A66615;
+}
+
