--- a/accounts/templates/accounts/dogupdate.html
+++ b/accounts/templates/accounts/dogupdate.html
@@ -1,37 +1,29 @@
-{% extends 'base.html' %}
-{% load django_bootstrap5 %}
-{% load static %}
-{% block css %}
+{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {% block css %}
 <link rel="stylesheet" href="{% static 'css/dogupdate.css' %}">
 <script src="https://kit.fontawesome.com/dcba51bc42.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-{% endblock css %}
-{% block content %}
+ {% endblock css %} {% block content %}
 <div class="m-3 ">
-{% if user.dog_set.all %}
-{% for dog in user.dog_set.all %}
-  {% if dog.dogphoto %}
-  {% comment %} <img src="{{ dog.dogphoto.url }}" alt="직접 설정해둔 강아지 사진"> {% endcomment %}
-  {% else %}
-  <img src="https://dummyimage.com/50x50" alt="기본 강아지 프로필 사진"/>
-  {% endif %}
-  <p>{{ request.dog.name }}</p>
-  {% endfor %}
-{% else %}
-<p>등록된 강아지 정보가 없어요ㅠㅠ</p>
-{% endif %}
-
+	 {% if user.dog_set.all %} {% for dog in user.dog_set.all %} {% if dog.dogphoto %} {% comment %} <img src="{{ dog.dogphoto.url }}" alt="직접 설정해둔 강아지 사진"> {% endcomment %} {% else %} <img src="https://dummyimage.com/50x50" alt="기본 강아지 프로필 사진"/>
+	{% endif %}
+	<p>
+		{{ request.dog.name }}
+	</p>
+	 {% endfor %} {% else %}
+	<p>
+		등록된 강아지 정보가 없어요ㅠㅠ
+	</p>
+	 {% endif %}
 </div>
-<div class= "container d-flex justify-content-center align-items-center card mt-5 mb-5 w-50">
-  <h2 class="mt-3">강아지 정보 수정</h2>
-  <form action="" method="POST" enctype="multipart/form-data" class="update-form container m-3 w-75">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    <div class="buttons text-center">
-      <button type="submit" class="btn button btnPush btnOrange m-3" title="Button push orange"><i class="fa-solid fa-check"> </i>수정</button>
-      <button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}'"><i class="fa-solid fa-rotate-left"></i> 뒤로가기</button>
-      <button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:dogdelete' dog.pk %}'"><i class="fa-solid fa-paw"></i> 등록 취소</button>
-  </form>
-</div>
+<div class="container d-flex justify-content-center align-items-center card mt-5 mb-5 w-50">
+	<h2 class="mt-3">강아지 정보 수정</h2>
+	<form action="" method="POST" enctype="multipart/form-data" class="update-form container m-3 w-75">
+		 {% csrf_token %} {% bootstrap_form form %}
+		<div class="buttons text-center">
+			<button type="submit" class="btn button btnPush btnOrange m-3" title="Button push orange"><i class="fa-solid fa-check"></i>수정</button>
+			<button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}'"><i class="fa-solid fa-rotate-left"></i> 뒤로가기</button>
+			<button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:dogdelete' dog.pk %}'"><i class="fa-solid fa-paw"></i> 등록 취소</button>
+		</form>
+	</div>
 </div>
 {% endblock content %}
