UPDATE : select-options 출력 수정

--- a/walkings/templates/walkings/index.html
+++ b/walkings/templates/walkings/index.html
@@ -11,6 +11,7 @@
   <section class="d-flex row justify-content-center align-items-center">
     <div class="map-area col-7">
       <div id="map" style="height:420px;"></div>
+      <p id="currentlocation"></p>
     </div>
     
     <div class="walking-form-area row d-flex col-3" style="">
