--- a/walkings/templates/walkings/index.html
+++ b/walkings/templates/walkings/index.html
@@ -66,8 +66,13 @@
                 {% if request.user in dogr.join.all  %}
                   <a href="{% url 'walkings:join' dogr.pk %}" class="btn btn-outline-warning card-link"><i class="bi bi-check-square-fill"></i> 취소</a>
                 {% else %}
-                  <a href="{% url 'walkings:join' dogr.pk %}" class="btn btn-outline-success card-link"><i class="bi bi-check-square"></i>
-                    참석</a>
+                  {% if dogr.join.count == dogr.membercnt %}
+                    <a href="{% url 'walkings:join' dogr.pk %}" class="btn btn-outline-secondary card-link disabled"><i class="bi bi-check-square"></i>
+                      정원 초과</a>
+                  {% else %}
+                    <a href="{% url 'walkings:join' dogr.pk %}" class="btn btn-outline-success card-link"><i class="bi bi-check-square"></i>
+                      참석</a>
+                  {% endif %}
                 {% endif %}
               {% else %}
                 <a href="{% url 'walkings:delete' dogr.pk %}" class="btn btn-outline-danger card-link"><i class="bi bi-trash"></i>삭제</a>
